--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,9 @@
  Fancy Reputation Change Log
 =============================
 
+ Version 1.0.2.70100 – 23.10.2016
+ - Updated for WoW patch 7.1
+
  Version 1.0.1.70000 – 23.10.2016
  - Updated included libraries
 
